refactor[backend]: Dockerfile修改